// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createReferencePages deduplicates event codes 1`] = `
Array [
  Object {
    "content": "---
title: Kubernetes Access Audit Events
description: \\"Provides a list of Kubernetes Access audit events.\\"
---
{/* Generated file. Do not edit. */}
{/* To regenerate, run \`make audit-event-reference\` */}

{/*cSpell:disable*/}

{/* Formatted event examples sometimes include different capitalization than
what we standardize on in the docs*/}
{/* vale messaging.capitalization = NO */}

",
    "id": "kubernetes-access",
  },
]
`;

exports[`createReferencePages displays multiple events with only one raw field 1`] = `
Array [
  Object {
    "content": "---
title: Kubernetes Access Audit Events
description: \\"Provides a list of Kubernetes Access audit events.\\"
---
{/* Generated file. Do not edit. */}
{/* To regenerate, run \`make audit-event-reference\` */}

{/*cSpell:disable*/}

{/* Formatted event examples sometimes include different capitalization than
what we standardize on in the docs*/}
{/* vale messaging.capitalization = NO */}

",
    "id": "kubernetes-access",
  },
]
`;

exports[`createReferencePages formats a list of events as expected 1`] = `
Array [
  Object {
    "content": "---
title: Kubernetes Access Audit Events
description: \\"Provides a list of Kubernetes Access audit events.\\"
---
{/* Generated file. Do not edit. */}
{/* To regenerate, run \`make audit-event-reference\` */}

{/*cSpell:disable*/}

{/* Formatted event examples sometimes include different capitalization than
what we standardize on in the docs*/}
{/* vale messaging.capitalization = NO */}



## kube.create

Kubernetes Created

Example:

\`\`\`json
{
  \\"cluster_name\\": \\"root\\",
  \\"code\\": \\"T3010I\\",
  \\"kube_labels\\": [
    null
  ],
  \\"ei\\": 0,
  \\"event\\": \\"kube.create\\",
  \\"expires\\": \\"0001-01-01T00:00:00Z\\",
  \\"name\\": \\"kube-local\\",
  \\"time\\": \\"2022-09-08T15:42:36.005Z\\",
  \\"uid\\": \\"9d37514f-aef5-426f-9fda-31fd35d070f5\\",
  \\"user\\": \\"05ff66c9-a948-42f4-af0e-a1b6ba62561e.root\\"
}
\`\`\`

## kube.update

Kubernetes Updated

Example:

\`\`\`json
{
  \\"cluster_name\\": \\"root\\",
  \\"code\\": \\"T3011I\\",
  \\"kube_labels\\": [
    null
  ],
  \\"ei\\": 0,
  \\"event\\": \\"kube.update\\",
  \\"expires\\": \\"0001-01-01T00:00:00Z\\",
  \\"name\\": \\"kube-local\\",
  \\"time\\": \\"2022-09-08T15:42:36.005Z\\",
  \\"uid\\": \\"fe631a5a-6418-49d6-99e7-5280654663ec\\",
  \\"user\\": \\"05ff66c9-a948-42f4-af0e-a1b6ba62561e.root\\"
}
\`\`\`
",
    "id": "kubernetes-access",
  },
]
`;

exports[`createReferencePages includes H3 sections for event codes if there are duplicate types 1`] = `
Array [
  Object {
    "content": "---
title: Kubernetes Access Audit Events
description: \\"Provides a list of Kubernetes Access audit events.\\"
---
{/* Generated file. Do not edit. */}
{/* To regenerate, run \`make audit-event-reference\` */}

{/*cSpell:disable*/}

{/* Formatted event examples sometimes include different capitalization than
what we standardize on in the docs*/}
{/* vale messaging.capitalization = NO */}

",
    "id": "kubernetes-access",
  },
]
`;

exports[`createReferencePages includes H3 sections for event codes with duplicate types and partial fields 1`] = `
Array [
  Object {
    "content": "---
title: Kubernetes Access Audit Events
description: \\"Provides a list of Kubernetes Access audit events.\\"
---
{/* Generated file. Do not edit. */}
{/* To regenerate, run \`make audit-event-reference\` */}

{/*cSpell:disable*/}

{/* Formatted event examples sometimes include different capitalization than
what we standardize on in the docs*/}
{/* vale messaging.capitalization = NO */}

",
    "id": "kubernetes-access",
  },
]
`;

exports[`createReferencePages orders event sections by H2 1`] = `
Array [
  Object {
    "content": "---
title: Kubernetes Access Audit Events
description: \\"Provides a list of Kubernetes Access audit events.\\"
---
{/* Generated file. Do not edit. */}
{/* To regenerate, run \`make audit-event-reference\` */}

{/*cSpell:disable*/}

{/* Formatted event examples sometimes include different capitalization than
what we standardize on in the docs*/}
{/* vale messaging.capitalization = NO */}

",
    "id": "kubernetes-access",
  },
]
`;
